--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "11.13.8",
     "@types/react": "16.8.15",
     "@types/react-dom": "16.8.4",
+    "axios": "^0.18.0",
+    "jest-dom": "^3.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
+    "react-testing-library": "^7.0.0",
     "typescript": "3.4.5"
   },
   "scripts": {
