--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@types/node": "11.13.8",
     "@types/react": "16.8.15",
     "@types/react-dom": "16.8.4",
+    "apollo-boost": "0.3.1",
     "axios": "^0.18.0",
+    "graphql": "14.2.1",
+    "graphql-tag": "2.10.1",
     "jest-dom": "^3.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
