Adding boilerplatey things to avoid wasted typing demo time

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "3.9.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.12.1",
     "react-test-renderer": "16.8.6"
