--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "typeRoots": ["./node_modules/@types"]
+    "jsx": "preserve"
   },
   "include": ["src"]
 }
